openshift/routes/minio-console-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: minio-console
  namespace: poc-onprem
  labels:
    app: minio
spec:
  to:
    kind: Service
    name: minio
    weight: 100
  port:
    targetPort: console
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None

# Made with Bob
